[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Rémi_Mgt <lacoquille33@gmail.com>"]
description = ""
name = "mr-blagounnette-bot-1"
version = "0.1.0"
[tool.poetry.dependencies]
discord = "^1.0"
python = "^3.7"
youtube-dl = "^2020.3"
flatten-json = "^0.1.7"
[tool.poetry.dev-dependencies]
